--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.26.1",
+    "react-shimmer-effects": "^1.0.3",
     "reactdom": "^2.0.0"
   }
 }
